--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
     }
 
 	.button {
-	  background-color: #04AA6D; /* Green */
 	  border: none;
-	  color: white;
 	  padding: 16px 32px;
 	  text-align: center;
 	  text-decoration: none;
@@ -102,16 +100,31 @@
 		  max-width: 200px;
 		  height: auto;
 		}
-	  h1 {
-			font-size: 40px;
-		}
+
 	.main-content img {
 		  max-width: 0px;
 		  height: auto;
-		}		
+		}
+
+		
+	h1 {
+			font-size: 40px;
+			text-align: center;
+		}
+		
 	p {
-		padding-right: 100px;
+		padding-right: 50px;
+		text-align: center;
 		}	
+		
+	h2 {
+		padding-right: 50px;
+		text-align: center;	
+		}	
+	.centerdiv {
+		  text-align: center;
+		  padding-right: 50px;
+		}
     }
 	
 	
@@ -143,13 +156,12 @@
 	<p>Starting from £20 an hour, I can visit your home or premises and get straight to work on trouble-shooting and 
 	fixing your technical devices. Whether it be one item or five, the charge remains the same depending on the time spent helping you.</p>
 
-	<h2>Testimonials</h2>
-	<p>(Insert customer testimonials here)</p>
-	
-	<a href="mailto:support@geekforanhour.com?subject=I Need Help!">
-	<button class="button button2">Email Me</button>
-	</a>
-	
+
+	<div class="centerdiv">
+		<a href="mailto:support@geekforanhour.com?subject=I Need Help!">
+			<button class="button button2">Email Me</button>
+		</a>
+	</div>
 	
   </div>
   <div class="main-content">
