--- a/index.html
+++ b/index.html
@@ -125,6 +125,12 @@
 		  text-align: center;
 		  padding-right: 50px;
 		}
+		
+		html, body {
+			max-width: 100%;
+			overflow-x: hidden;
+		}
+		
     }
 	
 	
@@ -138,7 +144,7 @@
 
 <div class="container">
   <div class="sidebar">
-    <h1>Do you struggle with technlogy?</h1>
+    <h1>Do you struggle with technology?</h1>
     <p>Are you someone who struggles to operate modern technology? Maybe you need help setting up your new phone or general 
 		advice with your gadgets which have overly complicated settings that make no sense to you.</p>
 
